完善样本脚本